--- a/dev-front/public/index.html
+++ b/dev-front/public/index.html
@@ -34,6 +34,7 @@
     -->
     <title>React App</title>
     <script src="%PUBLIC_URL%/js/face-api.min.js"></script>
+    <script src="%PUBLIC_URL%/js/getUserMedia.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
